# quilt.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
cmake/: coverage.cmake  make_amalgam.py  make_amalgam.sh  mingw-w64.cmake  sanitizers.cmake
docs/: diff-algorithms.md  manual.md  patch-research.md  quilt-tutorial-claude-research.md
fuzz/: fuzz_differential.cpp  fuzz_patch.cpp  fuzz_roundtrip.cpp  fuzz_roundtrip_fuzz.cpp  fuzz_shell_split.cpp
fuzz/corpus/: delete_file  empty_patch  exact_apply  force_missing  fuzz_match  malformed  merge  merge_diff3  multi_hunk  new_file  no_newline  offset  reverse  strip0
fuzz/corpus_roundtrip/: append_line  content_to_empty  deletion  identical  insertion  middle_change  multi_hunk  multi_hunk_simple  no_trailing_newline_both  remove_first_line  single_line_change  trailing_newline_added  trailing_newline_removed
fuzz/corpus_roundtrip_fuzz/: last_line  middle_change  multi_hunk  multi_line  near_bottom  near_top  single_change  small  two_hunks  with_spaces
fuzz/corpus_shell_split/: adjacent_quotes  backslash_unquoted  double_quote  escapes  many_escapes  mixed_quoting  nested_braces  realistic  single_quote  unclosed_double  unclosed_single  var_expansion  whitespace_only
src/: cmd_annotate.cpp  cmd_graph.cpp  cmd_mail.cpp  cmd_manage.cpp  cmd_patch.cpp  cmd_stack.cpp  cmd_stubs.cpp  core.cpp  diff.cpp  patch.cpp  platform.hpp  platform_posix.cpp  platform_win32.cpp  quilt.hpp
test/: RunScenario.cmake  Scenarios.cmake  TestHarness.cmake  test.sh
